cmake_minimum_required(VERSION 3.10.0)
project(leetcode_mastering VERSION 0.1.0 LANGUAGES C CXX)

# add_executable(1518_WaterBottles 1518_WaterBottles.cpp)
# add_executable(3100_WaterBottlesII 3100_WaterBottlesII.cpp)
# add_executable(0011_ContainerWithMostWater 0011_ContainerWithMostWater.cpp)
# add_executable(0417_PacificAtlanticWaterFlow 0417_PacificAtlanticWaterFlow.cpp)
add_executable(2300_SuccessfulPairsofSpellsandPotions 2300_SuccessfulPairsofSpellsandPotions.cpp)