cmake_minimum_required(VERSION 3.10.0)
project(leetcode_mastering VERSION 0.1.0 LANGUAGES C CXX)

# add_executable(1518_WaterBottles 1518_WaterBottles.cpp)
# add_executable(3100_WaterBottlesII 3100_WaterBottlesII.cpp)
# add_executable(0011_ContainerWithMostWater 0011_ContainerWithMostWater.cpp)
# add_executable(0417_PacificAtlanticWaterFlow 0417_PacificAtlanticWaterFlow.cpp)
# add_executable(2300_SuccessfulPairsofSpellsandPotions 2300_SuccessfulPairsofSpellsandPotions.cpp)
# add_executable(2598_SmallestMissingNonnegativeIntegerAfter 2598_SmallestMissingNonnegativeIntegerAfter.cpp)
# add_executable(3397_MaximumNumberofDistinctElementsAfter 3397_MaximumNumberofDistinctElementsAfter.cpp)
# add_executable(3349_AdjacentIncreasingSubarraysDetectionI 3349_AdjacentIncreasingSubarraysDetectionI.cpp)
# add_executable(1625_LexicographicallySmallestStringAfterApplyingOperations 1625_LexicographicallySmallestStringAfterApplyingOperations.cpp)
# add_executable(2011_FinalValueofVariableAfterPerformingOperations 2011_FinalValueofVariableAfterPerformingOperations.cpp)
# add_executable(3346_MaximumFrequencyofanElementAfterPerformingOperationsI 3346_MaximumFrequencyofanElementAfterPerformingOperationsI.cpp)
# add_executable(3354_MakeArrayElementsEqualtoZero 3354_MakeArrayElementsEqualtoZero.cpp)
# add_executable(1526_MinimumNumberofIncrementsonSubarraystoFormaTargetArray 1526_MinimumNumberofIncrementsonSubarraystoFormaTargetArray.cpp) 
add_executable(3289_TheTwoSneakyNumbersofDigitville 3289_TheTwoSneakyNumbersofDigitville.cpp) 