cmake_minimum_required(VERSION 3.10.0)
project(leetcode_mastering VERSION 0.1.0 LANGUAGES C CXX)

# add_executable(1518_WaterBottles 1518_WaterBottles.cpp)
# add_executable(3100_WaterBottlesII 3100_WaterBottlesII.cpp)
# add_executable(0011_ContainerWithMostWater 0011_ContainerWithMostWater.cpp)
# add_executable(0417_PacificAtlanticWaterFlow 0417_PacificAtlanticWaterFlow.cpp)
# add_executable(2300_SuccessfulPairsofSpellsandPotions 2300_SuccessfulPairsofSpellsandPotions.cpp)
# add_executable(2598_SmallestMissingNonnegativeIntegerAfter 2598_SmallestMissingNonnegativeIntegerAfter.cpp)
# add_executable(3397_MaximumNumberofDistinctElementsAfter 3397_MaximumNumberofDistinctElementsAfter.cpp)
# add_executable(3349_AdjacentIncreasingSubarraysDetectionI 3349_AdjacentIncreasingSubarraysDetectionI.cpp)
# add_executable(1625_LexicographicallySmallestStringAfterApplyingOperations 1625_LexicographicallySmallestStringAfterApplyingOperations.cpp)
# add_executable(2011_FinalValueofVariableAfterPerformingOperations 2011_FinalValueofVariableAfterPerformingOperations.cpp)
# add_executable(3346_MaximumFrequencyofanElementAfterPerformingOperationsI 3346_MaximumFrequencyofanElementAfterPerformingOperationsI.cpp)
# add_executable(3354_MakeArrayElementsEqualtoZero 3354_MakeArrayElementsEqualtoZero.cpp)
# add_executable(1526_MinimumNumberofIncrementsonSubarraystoFormaTargetArray 1526_MinimumNumberofIncrementsonSubarraystoFormaTargetArray.cpp) 
# add_executable(3289_TheTwoSneakyNumbersofDigitville 3289_TheTwoSneakyNumbersofDigitville.cpp) 
# add_executable(3217_DeleteNodesFromLinkedListPresentinArray 3217_DeleteNodesFromLinkedListPresentinArray.cpp)
# add_executable(2257_CountUnguardedCellsintheGrid 2257_CountUnguardedCellsintheGrid.cpp)
# add_executable(1578_MinimumTimetoMakeRopeColorful 1578_MinimumTimetoMakeRopeColorful.cpp)
# add_executable(3318_FindXSumofAllKLongSubarraysI.cpp 3318_FindXSumofAllKLongSubarraysI.cpp)
# add_executable(3321_FindXSumofAllKLongSubarraysII 3321_FindXSumofAllKLongSubarraysII.cpp)
# add_executable(3607_PowerGridMaintenance 3607_PowerGridMaintenance.cpp)
# add_executable(2528_MaximizetheMinimumPoweredCity 2528_MaximizetheMinimumPoweredCity.cpp)
add_executable(2169_CountOperationstoObtainZero 2169_CountOperationstoObtainZero.cpp)